--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "cywad"
 version = "0.1.0"
 authors = ["Evgeniy Tatarkin <tatarkin.evg@gmail.com>"]
 publish = false
+edition = "2018"
 
 [lib]
 name = "cywad"
@@ -22,44 +23,46 @@ doctest = false
 [features]
 default = []
 webkit = ["gtk", "webkit2gtk", "cairo-rs/png", ]
-devtools = ["tokio", "futures", "actix", "actix-web", "actix-service", "actix-web-actors", "actix-codec", "actix-utils", "awc", ]
-server = ["bytes", "tokio", "futures",  "cron", "actix", "actix-service", "actix-web-actors", "actix-web", "actix-files", "actix-cors", "http", "regex", ]
+devtools = ["tokio", "futures", "futures-util", "actix", "actix-web", "actix-service", "actix-web-actors", "actix-codec", "actix-utils", "awc", ]
+server = ["bytes", "tokio", "futures", "futures-util",  "cron", "actix", "actix-service", "actix-web-actors", "actix-web", "actix-files", "actix-cors", "http", "regex", ]
 png_widget = ["image", "imageproc", "rusttype", "lazy_static", "hex", ]
 
 # for integration tests only
 test_dependencies = [
     "gtk", "webkit2gtk", "cairo-rs/png",
-    "tokio", "futures", "actix", "actix-web", "actix-service", "actix-web-actors", "actix-codec", "actix-utils", "awc",
-    "bytes", "tokio", "futures",  "cron", "actix", "actix-service", "actix-web-actors", "actix-web", "actix-files", "actix-cors", "http", "regex",
-    "image", "imageproc", "rusttype", "lazy_static", "hex", 
+    "tokio", "futures", "futures-util", "actix", "actix-web", "actix-service", "actix-web-actors", "actix-codec", "actix-utils", "awc",
+    "bytes", "tokio", "cron", "actix", "actix-rt", "actix-service", "actix-web-actors", "actix-web", "actix-files", "actix-cors", "http", "regex",
+    "image", "imageproc", "rusttype", "lazy_static", "hex" 
 ]
 
 [dependencies]
-cfg-if = "0.1.6"
+cfg-if = "0.1.10"
 log = "0.4.6"
 env_logger = "0.5.13"
 failure = "0.1.3"
 clap = "2.32.0"
 toml = "0.4.8"
 
-serde = "1.0.80"
-serde_json = "1.0.32"
-serde_derive = "1.0.80"
+serde = "1.0.104"
+serde_json = "1.0.44"
+serde_derive = "1.0.104"
 
 slug = "0.1.4"
 base64 = "0.10.0"
 chrono = { version = "0.4.6", features = ["serde"]}
 
 # devtools + server
-futures = { version = "0.1.25", optional = true }
-tokio = { version = "0.1.11", optional = true }
-actix = { version = "0.8.3", optional = true }
-actix-web = { version = "1.0.5", optional = true } 
-actix-service = { version = "0.4.1", optional = true }
-actix-web-actors = { version = "1.0.2", optional = true } 
-actix-codec = { version = "0.1.2", optional = true }
-actix-utils = { version = "0.4.5", optional = true }
-awc = { version = "0.2.2", optional = true}
+futures = { version = "0.3.1", optional = true }
+futures-util = { version = "0.3.1", optional = true }
+tokio = { version = "0.2.9", optional = true }
+actix = { version = "0.9.0", optional = true }
+actix-web = { version = "2.0.0", optional = true } 
+actix-service = { version = "1.0.2", optional = true }
+actix-web-actors = { version = "2.0.0", optional = true } 
+actix-codec = { version = "0.2.0", optional = true }
+actix-utils = { version = "1.0.6", optional = true }
+awc = { version = "1.0.1", optional = true}
+actix-rt = { version = "1.0.0", optional = true }
 
 # webkit
 gtk = { version = "0.5.0", features = ["v3_18"], optional = true }
@@ -69,11 +72,11 @@ cairo-rs = { version = "0.5.0", optional = true }
 
 # server
 cron = { version = "0.6.0", optional = true }
-bytes = { version = "0.4.10", optional = true }
-actix-cors = { version = "0.1.0", optional = true } 
-actix-files = { version = "0.1.4", optional = true }
+bytes = { version = "0.5.3", optional = true }
+actix-cors = { version = "0.2.0", optional = true } 
+actix-files = { version = "0.2.1", optional = true }
 
-http = { version = "0.1.13", optional = true }
+http = { version = "0.2.0", optional = true }
 regex = { version = "1.0.6", optional = true }  
  
 # png widget
