--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,9 +43,8 @@ failure = "0.1.3"
 clap = "2.32.0"
 toml = "0.4.8"
 
-serde = "1.0.104"
+serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.44"
-serde_derive = "1.0.104"
 
 slug = "0.1.4"
 base64 = "0.10.0"
