--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,14 +37,14 @@ test_dependencies = [
 
 [dependencies]
 cfg-if = "0.1.10"
-log = "0.4.6"
-env_logger = "0.5.13"
-failure = "0.1.3"
-clap = "2.32.0"
-toml = "0.4.8"
+log = "0.4.11"
+env_logger = "0.7.1"
+failure = "0.1.8"
+clap = "2.33.3"
+toml = "0.5.6"
 
-serde = { version = "1.0.104", features = ["derive"] }
-serde_json = "1.0.44"
+serde = { version = "1.0.115", features = ["derive"] }
+serde_json = "1.0.57"
 
 slug = "0.1.4"
 base64 = "0.10.0"
@@ -81,6 +81,8 @@ http = { version = "0.2.0", optional = true }
 regex = { version = "1.0.6", optional = true }  
  
 # png widget
+# image = { version = "0.23.8", optional = true }
+# imageproc = { version = "0.21.0", optional = true }
 image = { version = "0.20.1", optional = true }
 imageproc = { version = "0.16.0", optional = true }
 rusttype = { version = "0.5", optional = true }
