anyhow instead of failure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ png_widget = ["cywad-server/png_widget"]
 cfg-if = "0.1.10"
 log = "0.4.11"
 env_logger = "0.7.1"
-failure = "0.1.8"
+anyhow = "1.0"
 clap = "2.33.3"
 toml = "0.5.6"
 base64 = "0.10.0"
