--- a/cywad-core/Cargo.toml
+++ b/cywad-core/Cargo.toml
@@ -23,7 +23,7 @@ chrono = { version = "0.4.6", features = ["serde"]}
 cfg-if = "0.1.10"
 log = "0.4.11"
 env_logger = "0.7.1"
-failure = "0.1.8"
+anyhow = "1.0"
 toml = "0.5.6"
 
 cron = { version = "0.6.0", optional = true }
