--- a/cywad-devtools/Cargo.toml
+++ b/cywad-devtools/Cargo.toml
@@ -12,7 +12,7 @@ cywad-core = { path = "../cywad-core", features = ["devtools"] }
 
 log = "0.4.11"
 env_logger = "0.7.1"
-failure = "0.1.8"
+anyhow = "1.0"
 
 serde = { version = "1.0.115", features = ["derive"] }
 serde_json = "1.0.57"
